.ssh/config: update

--- a/.ssh/config
+++ b/.ssh/config
@@ -43,45 +43,45 @@ Host orion
 	SetEnv XDG_CURRENT_DESKTOP=kde
 ################################################################################
 
+#### Giran infrastructure ######################################################
+Host router
+    Hostname rt.lian.su
+    Port 64222
+Host router.ttk
+    Hostname ttk.lian.su
+    Port 64222
+Host rt-uplink
+    Hostname rt.lian.su
+    Port 65222
+################################################################################
+
 #### Giran network hardware ####################################################
-Host core
-    Hostname core.lian.su
-    User root
-    Port 65222
 Host ttk-ap
-	Hostname ttk-ap.ttk.giran.lan
+	Hostname ttk-ap.direct.lan
 	User lian
 	Port 65222
 	IdentityFile ~/.ssh/extra/liannnix_old
     Ciphers aes128-ctr,aes192-ctr,aes256-ctr,aes128-cbc,3des-cbc
-Host ttk-ap.rt
-	Hostname rt.lian.su
-	User lian
-	Port 65222
 Host ttk-cpe
-	Hostname 10.0.128.10 # ttk-cpe.ttk.giran.lan
+	Hostname ttk-cpe.direct.lan
 	User lian
 	Port 65222
 	IdentityFile ~/.ssh/extra/liannnix_old
     Ciphers aes128-ctr,aes192-ctr,aes256-ctr,aes128-cbc,3des-cbc
-Host ttk-cpe.rt
-	Hostname ttk-cpe.link.giran.cyou
-	User lian
-	Port 65222
-Host sora
-	Hostname sora.lian.su
-    Port 65222
+Host atom
+	Hostname atom.lan
 Host dlink
     Hostname dlink.giran.cyou
 Host sw-core
-    Hostname sw-core.giran.cyou
+    Hostname sw-core.lan
     User web
 	IdentityFile ~/.ssh/extra/liannnix_old
+    Ciphers aes128-ctr,aes192-ctr,aes256-ctr,aes128-cbc,3des-cbc
 Host wifi-ap-master
-    Hostname wifi-ap-master.giran.cyou
+    Hostname wifi-ap-master.direct.lan
     Port 65222
 Host wifi-ap-repeater
-    Hostname wifi-ap-master.giran.cyou
+    Hostname wifi-ap-master.direct.lan
     Port 65222
 Host domru
     Hostname domru.lian.su
@@ -121,7 +121,7 @@ Host pdns-slave
     Port 65222
 ################################################################################
 
-#### Giran VMs #################################################################
+#### Giran Services ############################################################
 Host jarvis-dc-repl1
     Hostname 10.0.12.11
 Host dc0
@@ -130,6 +130,9 @@ Host dc1
     Hostname dc1.giran.cyou
 Host cifs
     Hostname cifs.smb.lan
+Host git.ssh
+    Hostname git.lan
+    Port 65222
 ################################################################################
 
 #### BaseALT servers ###########################################################
@@ -160,7 +163,7 @@ Host alterator-kea
 #### Jump servers ##############################################################
 Host giran.rt
     Hostname 88.147.142.191
-    Port 65222
+    Port 64222
 Host giran.ttk
     Hostname 217.23.74.241
     User lian
@@ -176,11 +179,13 @@ Host cifs.giran.rt
 
 #### Direct hosts via TTK Jump servers ####################################################
 Host sw-core.ttk.direct
-    Hostname 10.254.0.1
+    Hostname 10.254.0.100
     User web
 	IdentityFile ~/.ssh/extra/liannnix_old
     Ciphers aes128-ctr,aes192-ctr,aes256-ctr,aes128-cbc,3des-cbc
     ProxyJump giran.ttk
+Host router.ttk.direct
+    Hostname 10.254.0.1
 Host sekai.ttk.direct
     Hostname 10.254.0.2
     ProxyJump giran.ttk
@@ -193,11 +198,32 @@ Host trunk-node.ttk.direct
 Host yun.ttk.direct
     Hostname 10.254.0.3
     ProxyJump giran.ttk
+Host n100.ttk.direct
+    Hostname 10.254.0.7
+    ProxyJump giran.ttk
 Host wifi-ap-master.ttk.direct
     Hostname 10.254.0.114
     Port 65222
     # LocalForward 51080 10.254.0.1:80      # sw-core: http://localhost:51080/
     # LocalForward 52443 10.254.0.2:8006    # sekai:   http://localhost:52443/
+    ProxyJump giran.ttk
+Host wifi-ap-repeater.ttk.direct
+    Hostname 10.254.0.115
+    Port 65222
+    ProxyJump giran.ttk
+Host ttk-ap.ttk.direct
+    Hostname 10.254.0.117
+	User lian
+	Port 65222
+	IdentityFile ~/.ssh/extra/liannnix_old
+    Ciphers aes128-ctr,aes192-ctr,aes256-ctr,aes128-cbc,3des-cbc
+    ProxyJump giran.ttk
+Host ttk-cpe.ttk.direct
+    Hostname 10.254.0.118
+	User lian
+	Port 65222
+	IdentityFile ~/.ssh/extra/liannnix_old
+    Ciphers aes128-ctr,aes192-ctr,aes256-ctr,aes128-cbc,3des-cbc
     ProxyJump giran.ttk
 ################################################################################
 
