--- a/.config/mods/mods.yml
+++ b/.config/mods/mods.yml
@@ -36,13 +36,6 @@ mcp-servers:
     command: uvx
     args:
       - "mcp-server-git"
-  sticky:
-    command: uvx
-    args:
-      - "--python=3.10"
-      - "--from"
-      - "git+https://github.com/nkapila6/mcp-meme-sticky"
-      - "mcp-sticky"
   brightdata:
     command: npx
     args:
@@ -56,7 +49,7 @@ mcp-servers:
     env:
       - ALLOWED_COMMANDS=*
 # Timeout for MCP server calls, defaults to 15 seconds
-mcp-timeout: 15s
+mcp-timeout: 30s
 # List of predefined system messages that can be used as roles
 roles:
   "default": []
@@ -69,7 +62,7 @@ roles:
   short:
     - Ответы нужно давать коротко и по существу
 # Ask for the response to be formatted as markdown unless otherwise set
-format: true
+format: false
 # System role to use
 role: "default"
 # Render output as raw text when connected to a TTY
