--- a/.gitmodules
+++ b/.gitmodules
@@ -1,17 +1,17 @@
 [submodule ".config/nvim"]
 	branch = main
 	path = .config/nvim
-	url = git@github.com:liannnix/lazyvim-dotfiles.git
+	url = git@git.lian.su:lazyvim-dotfiles.git
 [submodule ".password-store"]
 	path = .password-store
-	url = gitea@git.giran.cyou:liannnix/pass.git
+	url = git@git.lian.su:pass.git
 [submodule "configs"]
 	path = configs
-	url = gitea@git.giran.cyou:liannnix/configs.git
+	url = git@git.lian.su:configs.git
 [submodule ".local/share/yadm/yadm"]
 	path = .local/share/yadm/yadm
 	url = https://github.com/TheLocehiliosan/yadm.git
 [submodule "wiki"]
 	path = wiki
-	url = gitea@git.giran.cyou:liannnix/wiki.git
+	url = git@git.lian.su:wiki.git
 	branch = master
