.ssh/config: update git host address

--- a/.ssh/config
+++ b/.ssh/config
@@ -21,7 +21,7 @@ Host gyle
 
 #### Giran Git server ###########################################################
 Host git
-    Hostname git.lan
+    Hostname git.lian.su
 ################################################################################
 
 #### BaseALT hosts #############################################################
